# llm-mock-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_mock/: __init__.py
tests/: test_mock.py
