[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mock-py"
version = "0.1.0"
description = "Deterministic mock LLM for testing agents without real API calls"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "testing", "mock", "agents", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]

[tool.setuptools.packages.find]
where = ["src"]
